--- a/be/board/build.gradle
+++ b/be/board/build.gradle
@@ -30,6 +30,18 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// aop
+	implementation 'org.springframework:spring-aop:6.1.6'
+
+	// swagger (http://localhost:8080/swagger-ui/index.html)
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+	// JSONObject
+	implementation 'org.json:json:20240303'
+
+	// health check (http://localhost:8080/actuator/health)
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
