--- a/be/board/build.gradle
+++ b/be/board/build.gradle
@@ -35,13 +35,30 @@ dependencies {
 	implementation 'org.springframework:spring-aop:6.1.6'
 
 	// swagger (http://localhost:8080/swagger-ui/index.html)
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
 	// JSONObject
 	implementation 'org.json:json:20240303'
 
 	// health check (http://localhost:8080/actuator/health)
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	//mongoDB 연결
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt:0.12.5'
+
+	// spring security
+	implementation 'org.springframework.security:spring-security-web:6.2.4'
+	implementation 'org.springframework.security:spring-security-config:6.2.4'
+
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.1'
+
+	// spring batch scheduler
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	testImplementation 'org.springframework.batch:spring-batch-test'
 }
 
 tasks.named('test') {
