feat: 유저, 게시판
- 유저 정보 불러오기, 수정하기 구현
- 게시판 파일과 함께 저장하기 구현
- 몽고db연결

--- a/be/board/src/main/resources/application.yml
+++ b/be/board/src/main/resources/application.yml
@@ -1,7 +1,14 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
+      enabled: true
   application:
     name: board
   data:
     mongodb:
       database: board
-      url: mongodb+srv://test:test@localhost:27017/board?retryWrites=true&w=majority
+      uri: mongodb://admin:admin@mongo_container:27017/board?authSource=admin
+server:
+  port: 8021
