--- a/be/board/build.gradle
+++ b/be/board/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
 	//mongoDB 연결
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+//	implementation 'org.mongodb:mongo-java-driver:3.12.14'
 
 	// jwt
 	implementation 'io.jsonwebtoken:jjwt:0.12.5'
