fix : java 11, maven으로 모두 변경
- security 세팅 변경
- jwtProvider 세팅 변경
- 종속성 전체 변경 -> spring 2

--- a/be/board/src/main/resources/application.yml
+++ b/be/board/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
   data:
     mongodb:
       database: board
-      uri: mongodb://admin:admin@mongo_container:27017/board?authSource=admin
+      uri: mongodb://test:test@localhost:27017/board?authSource=admin
 server:
   port: 8021
