--- a/fe/board/package.json
+++ b/fe/board/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jwt-decode": "^4.0.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
