--- a/be/board/pom.xml
+++ b/be/board/pom.xml
@@ -42,7 +42,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!--        몽고디비-->
+        <!-- 몽고디비 -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
@@ -52,7 +52,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- DevTools -->
@@ -63,7 +64,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Swagger http://localhost:8021/swagger-ui/index.html -->
+        <!-- Swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -83,7 +84,6 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.5</version>
         </dependency>
-
 
         <!-- Test Dependencies -->
         <dependency>
@@ -132,6 +132,13 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
