--- a/be/board/src/main/resources/application.yml
+++ b/be/board/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
   data:
     mongodb:
       database: board
-      uri: mongodb://test:test@localhost:27017/board?authSource=admin
+      uri: ${SPRING_DATA_MONGODB_URI:mongodb://root:rootpassword@localhost:21200/board?authSource=admin&authMechanism=SCRAM-SHA-256}
 server:
   port: 8021
