--- a/fe/board/package.json
+++ b/fe/board/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
@@ -36,6 +37,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "html-webpack-plugin": "^3.2.0",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
