[BE] fix : jwt 세팅, 트랜잭션, 리팩토링

--- a/be/board/pom.xml
+++ b/be/board/pom.xml
@@ -185,6 +185,13 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>-Xshare:off</jvmArguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
