--- a/be/board/src/main/resources/application-test.yml
+++ b/be/board/src/main/resources/application-test.yml
@@ -9,7 +9,7 @@ spring:
   data:
     mongodb:
       database: board
-      uri: ${SPRING_DATA_MONGODB_URI:mongodb://root:rootpassword@localhost:21201/board?authSource=admin&authMechanism=SCRAM-SHA-256}
+      uri: mongodb://root:rootpassword@localhost:21201/board?authSource=admin
   mail:
     host: smtp.gmail.com
     port: 587
