--- a/fe/board/Dockerfile
+++ b/fe/board/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:stable-alpine
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
